mutated by Databricks

--- a/examples/Embedding_Wikipedia_articles_for_search.ipynb
+++ b/examples/Embedding_Wikipedia_articles_for_search.ipynb
@@ -1,9 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a72f79bb-f6e2-46a7-a648-fd31c14c1473",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Embedding Wikipedia articles for search\n",
     "\n",
@@ -19,9 +26,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "01711ef8-af84-4bb6-b05e-e0c1c27584cf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 0. Prerequisites\n",
     "\n",
@@ -30,8 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f254d33d-d18e-4d8b-866a-d758852c60a0",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# imports\n",
@@ -44,9 +66,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1ff4e2bd-1680-4040-9fa5-07985509bfce",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Install any missing libraries with `pip install` in your terminal. E.g.,\n",
     "\n",
@@ -60,9 +89,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d79f9698-b576-4ae6-9f6f-c380aa65a905",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Set API key (if needed)\n",
     "\n",
@@ -70,9 +106,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "765f86f8-7f40-4ae4-9f9e-de5f10636180",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 1. Collect documents\n",
     "\n",
@@ -81,17 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 731 article titles in Category:2022 Winter Olympics.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d7da9329-15ee-4b4c-9f95-b3f354704fca",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# get Wikipedia pages about the 2022 Winter Olympics\n",
     "\n",
@@ -122,9 +165,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8c0550c1-6fe2-49ad-b88d-91da6da7f05c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 2. Chunk documents\n",
     "\n",
@@ -142,8 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5694b79a-4c61-495e-87a5-fe11f43095e7",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# define functions to split Wikipedia pages into sections\n",
@@ -227,17 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 5730 sections in 731 pages.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "80db0627-bce0-44b1-a091-90fc062735e4",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# split pages into sections\n",
     "# may take ~1 minute per 100 articles\n",
@@ -249,17 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtered out 530 sections, leaving 5200 sections.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c20c73b7-2c81-4e7f-99f1-cd141e2a475b",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# clean text\n",
     "def clean_section(section: tuple[list[str], str]) -> tuple[list[str], str]:\n",
@@ -293,101 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Lviv bid for the 2022 Winter Olympics']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'{{Olympic bid|2022|Winter|\\n| Paralympics = yes\\n| logo = Lviv 2022 Winter Olym...'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "['Lviv bid for the 2022 Winter Olympics', '==History==']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'[[Image:Lwów - Rynek 01.JPG|thumb|right|200px|View of Rynok Square in Lviv]]\\n...'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "['Lviv bid for the 2022 Winter Olympics', '==Venues==']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'{{Location map+\\n|Ukraine\\n|border =\\n|caption = Venue areas\\n|float = left\\n|widt...'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "['Lviv bid for the 2022 Winter Olympics', '==Venues==', '===City zone===']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The main Olympic Park would be centered around the [[Arena Lviv]], hosting th...'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "['Lviv bid for the 2022 Winter Olympics', '==Venues==', '===Mountain zone===', '====Venue cluster Tysovets-Panasivka====']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'An existing military ski training facility in [[Tysovets, Skole Raion|Tysovet...'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9045f0e9-ea61-4d26-ae90-d654495a58aa",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# print example data\n",
     "for ws in wikipedia_sections[:5]:\n",
@@ -398,7 +372,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d34a2cb2-81e8-49f0-a6e3-acb408dcf624",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Next, we'll recursively split long sections into smaller sections.\n",
     "\n",
@@ -416,8 +398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a900e8d9-f334-41f4-8e24-a0e5c84c4cf8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "GPT_MODEL = \"gpt-3.5-turbo\"  # only matters insofar as it selects which tokenizer to use\n",
@@ -514,17 +504,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5200 Wikipedia sections split into 6059 strings.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "498e364d-4ee9-46e7-8413-82aabaea1e8d",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# split sections into chunks\n",
     "MAX_TOKENS = 1600\n",
@@ -537,44 +527,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lviv bid for the 2022 Winter Olympics\n",
-      "\n",
-      "==History==\n",
-      "\n",
-      "[[Image:Lwów - Rynek 01.JPG|thumb|right|200px|View of Rynok Square in Lviv]]\n",
-      "\n",
-      "On 27 May 2010, [[President of Ukraine]] [[Viktor Yanukovych]] stated during a visit to [[Lviv]] that Ukraine \"will start working on the official nomination of our country as the holder of the Winter Olympic Games in [[Carpathian Mountains|Carpathians]]\".\n",
-      "\n",
-      "In September 2012, [[government of Ukraine]] approved a document about the technical-economic substantiation of the national project \"Olympic Hope 2022\". This was announced by Vladyslav Kaskiv, the head of Ukraine´s Derzhinvestproekt (State investment project). The organizers announced on their website venue plans featuring Lviv as the host city and location for the \"ice sport\" venues, [[Volovets]] (around {{convert|185|km|mi|abbr=on}} from Lviv) as venue for the [[Alpine skiing]] competitions and [[Tysovets, Skole Raion|Tysovets]] (around {{convert|130|km|mi|abbr=on}} from Lviv) as venue for all other \"snow sport\" competitions. By March 2013 no other preparations than the feasibility study had been approved.\n",
-      "\n",
-      "On 24 October 2013, session of the Lviv City Council adopted a resolution \"About submission to the International Olympic Committee for nomination of city to participate in the procedure for determining the host city of Olympic and Paralympic Winter Games in 2022\".\n",
-      "\n",
-      "On 5 November 2013, it was confirmed that Lviv was bidding to host the [[2022 Winter Olympics]]. Lviv would host the ice sport events, while the skiing events would be held in the [[Carpathian]] mountains. This was the first bid Ukraine had ever submitted for an Olympic Games.\n",
-      "\n",
-      "On 30 June 2014, the International Olympic Committee announced \"Lviv will turn its attention to an Olympic bid for 2026, and not continue with its application for 2022. The decision comes as a result of the present political and economic circumstances in Ukraine.\"\n",
-      "\n",
-      "Ukraine's Deputy Prime Minister Oleksandr Vilkul said that the Winter Games \"will be an impetus not just for promotion of sports and tourism in Ukraine, but a very important component in the economic development of Ukraine, the attraction of the investments, the creation of new jobs, opening Ukraine to the world, returning Ukrainians working abroad to their motherland.\"\n",
-      "\n",
-      "Lviv was one of the host cities of [[UEFA Euro 2012]].\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8a52863e-39b7-43de-a1e6-a1c65098640b",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# print example data\n",
     "print(wikipedia_strings[1])\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "eadce077-c1e2-4165-81d3-a318869f102c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 3. Embed document chunks\n",
     "\n",
@@ -585,23 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 0 to 999\n",
-      "Batch 1000 to 1999\n",
-      "Batch 2000 to 2999\n",
-      "Batch 3000 to 3999\n",
-      "Batch 4000 to 4999\n",
-      "Batch 5000 to 5999\n",
-      "Batch 6000 to 6999\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "843d3ddf-de84-4ad3-9830-e1e01e4f09ca",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# calculate embeddings\n",
     "EMBEDDING_MODEL = \"text-embedding-ada-002\"  # OpenAI's best embeddings as of Apr 2023\n",
@@ -622,9 +595,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f00aff2f-17f6-4e04-9d0e-02cb332045f1",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 4. Store document chunks and embeddings\n",
     "\n",
@@ -635,8 +615,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5993fb77-2fcb-417b-a97c-3aabae4d77c6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# save document chunks and embeddings\n",
@@ -648,6 +636,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Embedding_Wikipedia_articles_for_search",
+   "notebookOrigID": 1572001650642193,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "openai",
    "language": "python",
@@ -668,5 +664,5 @@
   "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
