--- a/examples/Embedding_long_inputs.ipynb
+++ b/examples/Embedding_long_inputs.ipynb
@@ -1,21 +1,35 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "108a491f-e823-4390-b830-d59370250ea1",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Embedding texts that are longer than the model's maximum context length\n",
     "\n",
     "OpenAI's embedding models cannot embed text that exceeds a maximum length. The maximum length varies by model, and is measured by _tokens_, not string length. If you are unfamiliar with tokenization, check out [How to count tokens with tiktoken](How_to_count_tokens_with_tiktoken.ipynb).\n",
     "\n",
-    "This notebook shows how to handle texts that are longer than a model's maximum context length. We'll demonstrate using embeddings from `text-embedding-ada-002`, but the same ideas can be applied to other models and tasks. To learn more about embeddings, check out the [OpenAI Embeddings Guide](https://beta.openai.com/docs/guides/embeddings).\n"
+    "This notebook shows how to handle texts that are longer than a model's maximum context length. We'll demonstrate using embeddings from `text-embedding-ada-002`, but the same ideas can be applied to other models and tasks. To learn more about embeddings, check out the [OpenAI Embeddings Guide](https://beta.openai.com/docs/guides/embeddings)."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2ac2109b-3958-4c0a-b098-3d3f5734313f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 1. Model context length\n",
     "\n",
@@ -24,8 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c0447091-c063-40fa-9935-82b224c4fdde",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import openai\n",
@@ -44,24 +66,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "05f44638-32d4-4713-9943-b0ab08a09f85",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "The `text-embedding-ada-002` model has a context length of 8191 tokens with the `cl100k_base` encoding, and we can see that going over that limit causes an error."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This model's maximum context length is 8191 tokens, however you requested 10001 tokens (10001 in your prompt; 0 for the completion). Please reduce your prompt; or completion length.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8ae70f1c-f530-4b45-860f-33164d1c30bf",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "long_text = 'AGI ' * 5000\n",
     "try:\n",
@@ -71,17 +101,31 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0222632a-5ef9-4a7b-af85-1024790e1c77",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Clearly we want to avoid these errors, particularly when handling programmatically with a large number of embeddings. Yet, we still might be faced with texts that are longer than the maximum context length. Below we describe and provide recipes for the main approaches to handling these longer texts: (1) simply truncating the text to the maximum allowed length, and (2) chunking the text and embedding each chunk individually."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "69fdfd09-e3db-43aa-bf10-2fc8a124f4f6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 1. Truncating the input text\n",
     "\n",
@@ -90,8 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fad56d32-93c6-434c-94b4-bfff16107150",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import tiktoken\n",
@@ -103,38 +155,49 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1dcc96a8-49be-4027-9595-897e764efc10",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Our example from before now works without error."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1536"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f430d50a-a7d8-4085-bf23-4825cd5fba50",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "truncated = truncate_text_tokens(long_text)\n",
     "len(get_embedding(truncated))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "43625d1a-ca48-4212-bb4a-64d41f12d280",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 2. Chunking the input text\n",
     "\n",
@@ -145,8 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2d8ce533-a558-4d5e-8b58-34458664cf0b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from itertools import islice\n",
@@ -162,17 +233,32 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "63f43a18-b5e9-43b0-83f0-b7d5114bdd31",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Now we define a function that encodes a string into tokens and then breaks it up into chunks."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9fb44d0f-69b3-424b-acc8-58f07380c18d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "def chunked_tokens(text, encoding_name, chunk_length):\n",
@@ -184,15 +270,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "921ac6d2-6d87-43b7-b3cf-b20a387a8a21",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Finally, we can write a function that safely handles embedding requests, even when the input text is longer than the maximum context length, by chunking the input tokens and embedding each chunk individually. The `average` flag can be set to `True` to return the weighted average of the chunk embeddings, or `False` to simply return the unmodified list of chunk embeddings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6feb40e2-d4f5-4a24-b777-cc82b84ddff1",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -213,27 +315,33 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0d23697d-da83-46a2-a6bb-07a95c815323",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Once again, we can now handle long input texts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting average=True gives us a single 1536-dimensional embedding vector for our long text.\n",
-      "Setting average=False gives us 2 embedding vectors, one for each of the chunks.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0394ab6d-c1ac-4f76-8397-df45158668a3",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "average_embedding_vector = len_safe_get_embedding(long_text, average=True)\n",
     "chunks_embedding_vectors = len_safe_get_embedding(long_text, average=False)\n",
@@ -243,15 +351,30 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "88ac540d-0f66-4861-897d-49cd31df6524",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "In some cases, it may make sense to split chunks on paragraph boundaries or sentence boundaries to help preserve the meaning of the text."
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Embedding_long_inputs",
+   "notebookOrigID": 1572001650643009,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -276,5 +399,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
