--- a/examples/Entity_extraction_for_long_documents.ipynb
+++ b/examples/Entity_extraction_for_long_documents.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9a680d8d-a9ea-4693-b886-858b32decd6c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Long Document Content Extraction\n",
     "\n",
@@ -27,15 +35,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a1b82bd8-0803-4f9e-8e6f-8a8518629619",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "18078c9d-289a-41b7-89c7-f59943f52d92",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "!pip install textract\n",
@@ -44,8 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b64dd6e4-94e6-4cad-a91c-f4cd54844da3",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import textract\n",
@@ -60,36 +92,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b65547f6-6cb5-4824-9c4d-9ef3381fc01a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Simple Entity Extraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extract key pieces of information from this regulation document.\n",
-      "If a particular piece of information is not present, output \"Not specified\".\n",
-      "When you extract a key piece of information, include the closest page number.\n",
-      "Use the following format:\n",
-      "0. Who is the author\n",
-      "1. What is the amount of the \"Power Unit Cost Cap\" in USD, GBP and EUR\n",
-      "2. What is the value of External Manufacturing Costs in USD\n",
-      "3. What is the Capital Expenditure Limit in USD\n",
-      "\n",
-      "Document: \"\"\"<document>\"\"\"\n",
-      "\n",
-      "0. Who is the author: Tom Anderson (Page 1)\n",
-      "1.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b2b8368d-8513-4af3-ae45-4e96884e6cce",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Example prompt - \n",
     "document = '<document>'\n",
@@ -102,8 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ab48ad9e-6481-4ab1-840d-29da335be735",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Split a text into smaller chunks of size n, preferably ending at the end of a sentence\n",
@@ -144,8 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "826c8db3-bf8a-4f93-8e93-350ebaec3588",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Initialise tokenizer\n",
@@ -164,24 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "73b35412-f917-41b0-ae7d-38285e101ecc",
+     "showTitle": false,
+     "title": ""
+    },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1. What is the amount of the \"Power Unit Cost Cap\" in USD, GBP and EUR: USD 95,000,000 (Page 2); GBP 76,459,000 (Page 2); EUR 90,210,000 (Page 2)',\n",
-       " '2. What is the value of External Manufacturing Costs in USD: US Dollars 20,000,000 in respect of each of the Full Year Reporting Periods ending on 31 December 2023, 31 December 2024 and 31 December 2025, adjusted for Indexation (Page 10)',\n",
-       " '3. What is the Capital Expenditure Limit in USD: US Dollars 30,000,000 (Page 32)']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "groups = [r.split('\\n') for r in results]\n",
     "\n",
@@ -193,36 +231,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0d733ac2-3e59-43a9-a329-48b9946e4465",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Complex Entity Extraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extract key pieces of information from this regulation document.\n",
-      "If a particular piece of information is not present, output \"Not specified\".\n",
-      "When you extract a key piece of information, include the closest page number.\n",
-      "Use the following format:\n",
-      "0. Who is the author\n",
-      "1. How is a Minor Overspend Breach calculated\n",
-      "2. How is a Major Overspend Breach calculated\n",
-      "3. Which years do these financial regulations apply to\n",
-      "\n",
-      "Document: \"\"\"<document>\"\"\"\n",
-      "\n",
-      "0. Who is the author: Tom Anderson (Page 1)\n",
-      "1.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d77ba4f2-a67c-4e21-8573-44a2eac8b693",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Example prompt - \n",
     "template_prompt=f'''Extract key pieces of information from this regulation document.\n",
@@ -234,45 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1. How is a Minor Overspend Breach calculated: A Minor Overspend Breach arises when a Power Unit Manufacturer submits its Full Year Reporting Documentation and Relevant Costs reported therein exceed the Power Unit Cost Cap by less than 5% (Page 24)',\n",
-       " '2. How is a Major Overspend Breach calculated: A Material Overspend Breach arises when a Power Unit Manufacturer submits its Full Year Reporting Documentation and Relevant Costs reported therein exceed the Power Unit Cost Cap by 5% or more (Page 25)',\n",
-       " '3. Which years do these financial regulations apply to: 2026 onwards (Page 1)',\n",
-       " '3. Which years do these financial regulations apply to: 2023, 2024, 2025, 2026 and subsequent Full Year Reporting Periods (Page 2)',\n",
-       " '3. Which years do these financial regulations apply to: 2022-2025 (Page 6)',\n",
-       " '3. Which years do these financial regulations apply to: 2023, 2024, 2025, 2026 and subsequent Full Year Reporting Periods (Page 10)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 14)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 16)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 19)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 21)',\n",
-       " '3. Which years do these financial regulations apply to: 2026 onwards (Page 26)',\n",
-       " '3. Which years do these financial regulations apply to: 2026 (Page 2)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 30)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 32)',\n",
-       " '3. Which years do these financial regulations apply to: 2023, 2024 and 2025 (Page 1)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 37)',\n",
-       " '3. Which years do these financial regulations apply to: 2026 onwards (Page 40)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 1)',\n",
-       " '3. Which years do these financial regulations apply to: 2026 to 2030 seasons (Page 46)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 47)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 1)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 1)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 56)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 1)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 16)',\n",
-       " '3. Which years do these financial regulations apply to: 2022 (Page 16)']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "72f49473-50b5-4ee4-ae87-12820138831b",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "results = []\n",
     "\n",
@@ -289,7 +295,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "011a50ae-36be-4a14-9e20-160e087def64",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Consolidation\n",
     "\n",
@@ -305,6 +319,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Entity_extraction_for_long_documents",
+   "notebookOrigID": 1572001650642153,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "embed_retrieve",
    "language": "python",
@@ -329,5 +351,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
