--- a/examples/Get_embeddings.ipynb
+++ b/examples/Get_embeddings.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d3693292-83c9-4879-b2d7-55b419f9a8af",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Get embeddings\n",
     "\n",
@@ -11,20 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1536"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c60acce6-6e6f-48c3-a1e3-f5be54b11423",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import openai\n",
     "\n",
@@ -36,17 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1536\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "47caa4f9-d3db-4c41-ba75-5d1b85485b63",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import openai\n",
     "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
@@ -63,6 +68,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Get_embeddings",
+   "notebookOrigID": 1572001650642999,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3.9.9 ('openai')",
    "language": "python",
@@ -88,5 +101,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
