--- a/examples/How_to_count_tokens_with_tiktoken.ipynb
+++ b/examples/How_to_count_tokens_with_tiktoken.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bd3efe90-e37a-4497-91be-5107466016d0",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# How to count tokens with tiktoken\n",
     "\n",
@@ -55,7 +63,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "48798ca2-b3f9-444b-ab9c-143df4033d1b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 0. Install `tiktoken`\n",
     "\n",
@@ -64,39 +80,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: tiktoken in /Users/ted/.virtualenvs/openai/lib/python3.9/site-packages (0.3.2)\n",
-      "Requirement already satisfied: regex>=2022.1.18 in /Users/ted/.virtualenvs/openai/lib/python3.9/site-packages (from tiktoken) (2022.10.31)\n",
-      "Requirement already satisfied: requests>=2.26.0 in /Users/ted/.virtualenvs/openai/lib/python3.9/site-packages (from tiktoken) (2.28.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/ted/.virtualenvs/openai/lib/python3.9/site-packages (from requests>=2.26.0->tiktoken) (2.0.9)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/ted/.virtualenvs/openai/lib/python3.9/site-packages (from requests>=2.26.0->tiktoken) (3.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/ted/.virtualenvs/openai/lib/python3.9/site-packages (from requests>=2.26.0->tiktoken) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/ted/.virtualenvs/openai/lib/python3.9/site-packages (from requests>=2.26.0->tiktoken) (1.26.7)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "61f56c95-d9ac-4cc1-af1e-f6df8c551aff",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%pip install --upgrade tiktoken"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "af1cf25c-8eee-4d9a-b446-159a1e7a7ad4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 1. Import `tiktoken`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2418b13a-8d56-4549-9169-7618a21107d9",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import tiktoken\n"
@@ -104,7 +129,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0f3c7028-2301-422c-906e-c85b8bf4e769",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 2. Load an encoding\n",
     "\n",
@@ -115,8 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e0ac1700-7872-4bc5-a596-c6bc76fc9c99",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "encoding = tiktoken.get_encoding(\"cl100k_base\")\n"
@@ -124,15 +165,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "30bcaf6c-40e6-4151-acff-825c305aedda",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Use `tiktoken.encoding_for_model()` to automatically load the correct encoding for a given model name."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c0e88414-ef3e-45be-8fc5-0ee18a440707",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "encoding = tiktoken.encoding_for_model(\"gpt-3.5-turbo\")"
@@ -140,50 +197,78 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3b5e9965-4482-42fb-b5ba-533daaee5860",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
-    "## 3. Turn text into tokens with `encoding.encode()`\n",
-    "\n"
+    "## 3. Turn text into tokens with `encoding.encode()`"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b6c65de8-5970-4739-86b2-33a9f1e293af",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "The `.encode()` method converts a text string into a list of token integers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[83, 1609, 5963, 374, 2294, 0]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e6d2377c-e57d-411a-932f-8a8f54c23590",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "encoding.encode(\"tiktoken is great!\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e4af3dbf-5d53-4c3f-b50d-eeca737a4e06",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Count tokens by counting the length of the list returned by `.encode()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "61295344-b9aa-43b2-903f-33f5ec05cdf9",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "def num_tokens_from_string(string: str, encoding_name: str) -> int:\n",
@@ -195,102 +280,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "43e5db50-162c-4041-8e51-8dd588b2d62e",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "num_tokens_from_string(\"tiktoken is great!\", \"cl100k_base\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5f3df3a4-f72c-4637-a99d-0c93f87ceaa4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 4. Turn tokens into text with `encoding.decode()`"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d931e513-6dbf-46ac-ad63-e8d0c0aebee5",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "`.decode()` converts a list of token integers to a string."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'tiktoken is great!'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ff63a944-ccd9-4162-b4ab-ef21ce8aedda",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "encoding.decode([83, 1609, 5963, 374, 2294, 0])\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "535c3a2b-290b-46fa-8c77-c39c0364f608",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Warning: although `.decode()` can be applied to single tokens, beware that it can be lossy for tokens that aren't on utf-8 boundaries."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c1f2c4be-294f-45f4-82c4-de483699a3fc",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "For single tokens, `.decode_single_token_bytes()` safely converts a single integer token to the bytes it represents."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[b't', b'ik', b'token', b' is', b' great', b'!']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c0c1b5de-da8e-4b63-b4f1-051f1e5a1dd7",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "[encoding.decode_single_token_bytes(token) for token in [83, 1609, 5963, 374, 2294, 0]]\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3b921b7f-3a0b-4815-afb4-53090a88bcd5",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "(The `b` in front of the strings indicates that the strings are byte strings.)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9c0f9a92-5312-4daf-9046-c03116a5d9cb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 5. Comparing encodings\n",
     "\n",
@@ -299,8 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ff8c179e-9661-419a-9e92-2b239673ee7a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "def compare_encodings(example_string: str) -> None:\n",
@@ -322,97 +454,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Example string: \"antidisestablishmentarianism\"\n",
-      "\n",
-      "gpt2: 5 tokens\n",
-      "token integers: [415, 29207, 44390, 3699, 1042]\n",
-      "token bytes: [b'ant', b'idis', b'establishment', b'arian', b'ism']\n",
-      "\n",
-      "p50k_base: 5 tokens\n",
-      "token integers: [415, 29207, 44390, 3699, 1042]\n",
-      "token bytes: [b'ant', b'idis', b'establishment', b'arian', b'ism']\n",
-      "\n",
-      "cl100k_base: 6 tokens\n",
-      "token integers: [519, 85342, 34500, 479, 8997, 2191]\n",
-      "token bytes: [b'ant', b'idis', b'establish', b'ment', b'arian', b'ism']\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "776c95cc-107e-4b55-aae8-8d70d05ffd4c",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "compare_encodings(\"antidisestablishmentarianism\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Example string: \"2 + 2 = 4\"\n",
-      "\n",
-      "gpt2: 5 tokens\n",
-      "token integers: [17, 1343, 362, 796, 604]\n",
-      "token bytes: [b'2', b' +', b' 2', b' =', b' 4']\n",
-      "\n",
-      "p50k_base: 5 tokens\n",
-      "token integers: [17, 1343, 362, 796, 604]\n",
-      "token bytes: [b'2', b' +', b' 2', b' =', b' 4']\n",
-      "\n",
-      "cl100k_base: 7 tokens\n",
-      "token integers: [17, 489, 220, 17, 284, 220, 19]\n",
-      "token bytes: [b'2', b' +', b' ', b'2', b' =', b' ', b'4']\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "03655dc8-1dda-4f9d-882a-bfe0537c9cd5",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "compare_encodings(\"2 + 2 = 4\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Example string: \"お誕生日おめでとう\"\n",
-      "\n",
-      "gpt2: 14 tokens\n",
-      "token integers: [2515, 232, 45739, 243, 37955, 33768, 98, 2515, 232, 1792, 223, 30640, 30201, 29557]\n",
-      "token bytes: [b'\\xe3\\x81', b'\\x8a', b'\\xe8\\xaa', b'\\x95', b'\\xe7\\x94\\x9f', b'\\xe6\\x97', b'\\xa5', b'\\xe3\\x81', b'\\x8a', b'\\xe3\\x82', b'\\x81', b'\\xe3\\x81\\xa7', b'\\xe3\\x81\\xa8', b'\\xe3\\x81\\x86']\n",
-      "\n",
-      "p50k_base: 14 tokens\n",
-      "token integers: [2515, 232, 45739, 243, 37955, 33768, 98, 2515, 232, 1792, 223, 30640, 30201, 29557]\n",
-      "token bytes: [b'\\xe3\\x81', b'\\x8a', b'\\xe8\\xaa', b'\\x95', b'\\xe7\\x94\\x9f', b'\\xe6\\x97', b'\\xa5', b'\\xe3\\x81', b'\\x8a', b'\\xe3\\x82', b'\\x81', b'\\xe3\\x81\\xa7', b'\\xe3\\x81\\xa8', b'\\xe3\\x81\\x86']\n",
-      "\n",
-      "cl100k_base: 9 tokens\n",
-      "token integers: [33334, 45918, 243, 21990, 9080, 33334, 62004, 16556, 78699]\n",
-      "token bytes: [b'\\xe3\\x81\\x8a', b'\\xe8\\xaa', b'\\x95', b'\\xe7\\x94\\x9f', b'\\xe6\\x97\\xa5', b'\\xe3\\x81\\x8a', b'\\xe3\\x82\\x81', b'\\xe3\\x81\\xa7', b'\\xe3\\x81\\xa8\\xe3\\x81\\x86']\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "826316c8-d3f9-478e-af5b-09fc6de932b8",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "compare_encodings(\"お誕生日おめでとう\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1d4b5950-a467-4164-8e1a-eb20bcc7af33",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 6. Counting tokens for chat API calls\n",
     "\n",
@@ -425,8 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3e895d72-6cc8-4ca4-871e-fdb965e006cb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "def num_tokens_from_messages(messages, model=\"gpt-3.5-turbo-0301\"):\n",
@@ -463,24 +572,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gpt-3.5-turbo-0301\n",
-      "127 prompt tokens counted by num_tokens_from_messages().\n",
-      "127 prompt tokens counted by the OpenAI API.\n",
-      "\n",
-      "gpt-4-0314\n",
-      "129 prompt tokens counted by num_tokens_from_messages().\n",
-      "129 prompt tokens counted by the OpenAI API.\n",
-      "\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5a111919-191b-45e4-a932-7f67925821db",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# let's verify the function above matches the OpenAI API response\n",
     "\n",
@@ -534,6 +636,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "How_to_count_tokens_with_tiktoken",
+   "notebookOrigID": 1572001650641852,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -558,5 +668,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
