--- a/examples/How_to_format_inputs_to_ChatGPT_models.ipynb
+++ b/examples/How_to_format_inputs_to_ChatGPT_models.ipynb
@@ -1,9 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c4b901c1-14b4-4bdd-ac83-941a6c659899",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# How to format inputs to ChatGPT models\n",
     "\n",
@@ -17,17 +24,32 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5266d931-93db-4353-9443-2cdcc6220cac",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 1. Import the openai library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d8d6a890-cf59-4f74-a965-619a7037cb08",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# if needed, install and/or upgrade to the latest version of the OpenAI Python library\n",
@@ -36,8 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "72b5f989-597e-4d3d-8658-1a689222c7d0",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# import the OpenAI Python library for calling the OpenAI API\n",
@@ -45,9 +75,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "655ea4a3-83de-45f6-ac99-4fec8fe42a05",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# 2. An example chat API call\n",
     "\n",
@@ -66,40 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-6xpmlDodtW6RwiaMaC1zhLsR8Y1D3 at 0x10dccc900> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"content\": \"Orange who?\",\n",
-       "        \"role\": \"assistant\"\n",
-       "      }\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1679718435,\n",
-       "  \"id\": \"chatcmpl-6xpmlDodtW6RwiaMaC1zhLsR8Y1D3\",\n",
-       "  \"model\": \"gpt-3.5-turbo-0301\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"usage\": {\n",
-       "    \"completion_tokens\": 3,\n",
-       "    \"prompt_tokens\": 39,\n",
-       "    \"total_tokens\": 42\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "eb8877cd-20db-4852-9726-9d7a178d4d16",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Example OpenAI Python library request\n",
     "MODEL = \"gpt-3.5-turbo\"\n",
@@ -118,9 +132,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "41f536c6-7d47-4b78-aff8-5f1d0610d94f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "As you can see, the response object has a few fields:\n",
     "- `id`: the ID of the request\n",
@@ -135,37 +156,48 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b5632379-af29-4863-9e9c-e3dfc795e4d5",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Extract just the reply with:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Orange who?'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b0219091-0d83-4ed3-95b9-1bf47e51b941",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "response['choices'][0]['message']['content']\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2531e2b5-1aaa-4952-ae0d-bfd4804ba57a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Even non-conversation-based tasks can fit into the chat format, by placing the instruction in the first user message.\n",
     "\n",
@@ -174,21 +206,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ahoy matey! Let me tell ye about asynchronous programming, arrr! It be like havin' a crew of sailors workin' on different tasks at the same time. Each sailor be doin' their own job, but they don't wait for the others to finish before movin' on to the next task. They be workin' independently, but still makin' progress towards the same goal.\n",
-      "\n",
-      "In programming, it be the same. Instead of waitin' for one task to finish before startin' the next, we can have multiple tasks runnin' at the same time. This be especially useful when we be dealin' with slow or unpredictable tasks, like fetchin' data from a server or readin' from a file. We don't want our program to be stuck waitin' for these tasks to finish, so we can use asynchronous programming to keep things movin' along.\n",
-      "\n",
-      "So, me hearty, asynchronous programming be like havin' a crew of sailors workin' independently towards the same goal. It be a powerful tool in the programmer's arsenal, and one that can help us build faster and more efficient programs. Arrr!\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c403e909-bd9f-48f6-9a36-0d8a22b7653e",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# example with a system message\n",
     "response = openai.ChatCompletion.create(\n",
@@ -205,25 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ahoy mateys! Let me tell ye about asynchronous programming, arrr! \n",
-      "\n",
-      "Ye see, in the world of programming, sometimes we need to wait for things to happen before we can move on to the next task. But with asynchronous programming, we can keep working on other tasks while we wait for those things to happen. \n",
-      "\n",
-      "It's like when we're sailing the high seas and we need to wait for the wind to change direction. We don't just sit there twiddling our thumbs, no sir! We keep busy with other tasks like repairing the ship or checking the maps. \n",
-      "\n",
-      "In programming, we use something called callbacks or promises to keep track of those things we're waiting for. And while we wait for those callbacks or promises to be fulfilled, we can keep working on other parts of our code. \n",
-      "\n",
-      "So, me hearties, asynchronous programming is like being a pirate on the high seas - always busy with tasks and never wasting a moment! Arrr!\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "313e311f-e3c7-453f-97f9-372b01c09bcf",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# example without a system message\n",
     "response = openai.ChatCompletion.create(\n",
@@ -238,9 +258,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ae961091-ab6d-4a92-981f-57d39687cfc0",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 3. Tips for instructing gpt-3.5-turbo-0301\n",
     "\n",
@@ -248,9 +275,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4c63b966-201d-439d-8712-3f0f7fb6537a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### System messages\n",
     "\n",
@@ -261,23 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sure! Fractions are a way of representing a part of a whole. The top number of a fraction is called the numerator, and it represents how many parts of the whole we are talking about. The bottom number is called the denominator, and it represents how many equal parts the whole is divided into.\n",
-      "\n",
-      "For example, if we have a pizza that is divided into 8 equal slices, and we have eaten 3 of those slices, we can represent that as the fraction 3/8. The numerator is 3 because we have eaten 3 slices, and the denominator is 8 because the pizza is divided into 8 slices.\n",
-      "\n",
-      "To add or subtract fractions, we need to have a common denominator. This means that we need to find a number that both denominators can divide into evenly. For example, if we want to add 1/4 and 2/3, we need to find a common denominator. We can do this by multiplying the denominators together, which gives us 12. Then, we can convert both fractions to have a denominator of 12. To do this, we multiply the numerator and denominator of 1/4 by 3, which gives us 3/12. We multiply the numerator and denominator of 2/3 by 4, which gives us 8/12. Now we can add the two fractions together, which gives us 11/12.\n",
-      "\n",
-      "Does that make sense? Do you have any questions?\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "10980e4d-6160-46eb-8b73-bb5873eb0c62",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# An example of a system message that primes the assistant to explain concepts in great depth\n",
     "response = openai.ChatCompletion.create(\n",
@@ -294,17 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fractions represent a part of a whole. They consist of a numerator (top number) and a denominator (bottom number) separated by a line. The numerator represents how many parts of the whole are being considered, while the denominator represents the total number of equal parts that make up the whole.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e4183891-ff97-471a-956a-2ffadb8ac395",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# An example of a system message that primes the assistant to give brief, to-the-point answers\n",
     "response = openai.ChatCompletion.create(\n",
@@ -320,9 +348,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0dffdb58-d383-4d87-923f-5839e732f076",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Few-shot prompting\n",
     "\n",
@@ -335,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We don't have enough time to complete the entire project perfectly.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1761ea8d-e55a-4318-af47-2d27c13eda28",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# An example of a faked few-shot conversation to prime the model into translating business jargon to simpler speech\n",
     "response = openai.ChatCompletion.create(\n",
@@ -367,9 +402,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c6ab4dbd-b06f-40ee-8ba3-2c69cc918350",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "To help clarify that the example messages are not part of a real conversation, and shouldn't be referred back to by the model, you can try setting the `name` field of `system` messages to `example_user` and `example_assistant`.\n",
     "\n",
@@ -378,17 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This sudden change in plans means we don't have enough time to do everything for the client's project.\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d35783ae-c3ff-4d15-bcfc-4d83669513d5",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# The business jargon translation example, but with example names for the example messages\n",
     "response = openai.ChatCompletion.create(\n",
@@ -408,9 +450,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fd459d9f-919a-44c3-ab87-86025698afe6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Not every attempt at engineering conversations will succeed at first.\n",
     "\n",
@@ -422,9 +471,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "41741394-f60a-4170-93d7-bb6807d24f4f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 4. Counting tokens\n",
     "\n",
@@ -444,8 +500,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fc5cdcc1-2112-417c-97fc-c4bd0cec6f46",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import tiktoken\n",
@@ -485,24 +549,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gpt-3.5-turbo-0301\n",
-      "127 prompt tokens counted by num_tokens_from_messages().\n",
-      "127 prompt tokens counted by the OpenAI API.\n",
-      "\n",
-      "gpt-4-0314\n",
-      "129 prompt tokens counted by num_tokens_from_messages().\n",
-      "129 prompt tokens counted by the OpenAI API.\n",
-      "\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "760782ec-5146-40e1-8c39-fbae7a6f8c91",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# let's verify the function above matches the OpenAI API response\n",
     "\n",
@@ -554,6 +611,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "How_to_format_inputs_to_ChatGPT_models",
+   "notebookOrigID": 1572001650641917,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "openai",
    "language": "python",
@@ -579,5 +644,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
