--- a/examples/How_to_handle_rate_limits.ipynb
+++ b/examples/How_to_handle_rate_limits.ipynb
@@ -1,9 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5c7924e5-0e7f-46c7-b92b-8e9460fd1a33",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# How to handle rate limits\n",
     "\n",
@@ -25,9 +32,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e91201a2-e4cd-44b9-88ea-82b1e7e1f3cf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Default rate limits\n",
     "\n",
@@ -104,12 +118,20 @@
     "\n",
     "If you'd like your organization's rate limit increased, please fill out the following form:\n",
     "\n",
-    "- [OpenAI Rate Limit Increase Request form](https://forms.gle/56ZrwXXoxAN1yt6i9)\n"
+    "- [OpenAI Rate Limit Increase Request form](https://forms.gle/56ZrwXXoxAN1yt6i9)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5c1c131f-7728-47ff-8d50-cbce0948fe19",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Example rate limit error\n",
     "\n",
@@ -124,8 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8313b96f-289f-4690-9837-02fa43ca1eab",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import openai  # for making OpenAI API requests\n",
@@ -141,7 +171,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "bf4e15c2-3ede-4de1-97cf-35d7c4217dd2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## How to avoid rate limit errors\n",
     "\n",
@@ -162,7 +200,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9033d944-c401-4496-b393-10914796a669",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "#### Example #1: Using the Tenacity library\n",
     "\n",
@@ -175,38 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-5oowO391reUW8RGVfFyzBM1uBs4A5 at 0x10d8cae00> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"length\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \" a little girl dreamed of becoming a model.\\n\\nNowadays, that dream\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1662793900,\n",
-       "  \"id\": \"cmpl-5oowO391reUW8RGVfFyzBM1uBs4A5\",\n",
-       "  \"model\": \"text-davinci-002\",\n",
-       "  \"object\": \"text_completion\",\n",
-       "  \"usage\": {\n",
-       "    \"completion_tokens\": 16,\n",
-       "    \"prompt_tokens\": 5,\n",
-       "    \"total_tokens\": 21\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c89c7e00-2553-44cf-8788-43119feba460",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import openai  # for OpenAI API calls\n",
     "from tenacity import (\n",
@@ -226,7 +251,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "098e6fe0-ece8-45b4-994d-c242faf4a17b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "#### Example #2: Using the backoff library\n",
     "\n",
@@ -237,38 +270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-5oowPhIdUvshEsF1rBhhwE9KFfI3M at 0x111043680> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"length\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \" two children lived in a poor country village. In the winter, the temperature would\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1662793901,\n",
-       "  \"id\": \"cmpl-5oowPhIdUvshEsF1rBhhwE9KFfI3M\",\n",
-       "  \"model\": \"text-davinci-002\",\n",
-       "  \"object\": \"text_completion\",\n",
-       "  \"usage\": {\n",
-       "    \"completion_tokens\": 16,\n",
-       "    \"prompt_tokens\": 5,\n",
-       "    \"total_tokens\": 21\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4125f097-61be-4308-b06a-82fe38717cfd",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import backoff  # for exponential backoff\n",
     "import openai  # for OpenAI API calls\n",
@@ -284,7 +296,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "efd6fc29-f51b-412b-a257-ec04fee9834e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "#### Example 3: Manual backoff implementation\n",
     "\n",
@@ -293,38 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-5oowRsCXv3AkUgVJyyo3TQrVq7hIT at 0x111024220> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"length\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \" a man decided to greatly improve his karma by turning his life around.\\n\\n\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1662793903,\n",
-       "  \"id\": \"cmpl-5oowRsCXv3AkUgVJyyo3TQrVq7hIT\",\n",
-       "  \"model\": \"text-davinci-002\",\n",
-       "  \"object\": \"text_completion\",\n",
-       "  \"usage\": {\n",
-       "    \"completion_tokens\": 16,\n",
-       "    \"prompt_tokens\": 5,\n",
-       "    \"total_tokens\": 21\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9c51194a-d4fb-419c-b14b-51ecbe3039ef",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# imports\n",
     "import random\n",
@@ -386,9 +385,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6c97f529-f012-4cf9-80a6-e4922b2c8846",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## How to maximize throughput of batch processing given rate limits\n",
     "\n",
@@ -407,38 +413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-5oowVVZnAzdCPtUJ0rifeamtLcZRp at 0x11b2c7680> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"length\",\n",
-       "      \"index\": 0,\n",
-       "      \"logprobs\": null,\n",
-       "      \"text\": \" there was an idyllic little farm that sat by a babbling brook\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1662793907,\n",
-       "  \"id\": \"cmpl-5oowVVZnAzdCPtUJ0rifeamtLcZRp\",\n",
-       "  \"model\": \"text-davinci-002\",\n",
-       "  \"object\": \"text_completion\",\n",
-       "  \"usage\": {\n",
-       "    \"completion_tokens\": 16,\n",
-       "    \"prompt_tokens\": 5,\n",
-       "    \"total_tokens\": 21\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1034176e-e254-4a53-9e73-bbdc5aeb5a7f",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# imports\n",
     "import time\n",
@@ -468,10 +453,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0fd91f79-be36-46fc-a90d-8645a832a646",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
-    "\n",
-    "\n",
     "### Batching requests\n",
     "\n",
     "The OpenAI API has separate limits for requests per minute and tokens per minute.\n",
@@ -487,26 +478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Once upon a time, before there were grandiloquent tales of the massacre at Fort Mims, there were stories of\n",
-      "Once upon a time, a full-sized search and rescue was created. However, CIDIs are the addition of requiring\n",
-      "Once upon a time, Schubert was hot with the films. “Schubert sings of honey, flowers,\n",
-      "Once upon a time, you could watch these films on your VCR, sometimes years after their initial theatrical release, and there\n",
-      "Once upon a time, there was a forest. In that forest, the forest animals ruled. The forest animals had their homes\n",
-      "Once upon a time, there were two programs that complained about false positive scans. Peacock and Midnight Manager alike, only\n",
-      "Once upon a time, a long, long time ago, tragedy struck. it was the darkest of nights, and there was\n",
-      "Once upon a time, when Adam was a perfect little gentleman, he was presented at Court as a guarantee of good character.\n",
-      "Once upon a time, Adam and Eve made a mistake. They ate the fruit from the tree of immortality and split the consequences\n",
-      "Once upon a time, there was a set of programming fundamental principles known as the \"X model.\" This is a set of\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d315d38c-e54b-40cb-9511-dbd09e85b3a0",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import openai  # for making OpenAI API requests\n",
     "\n",
@@ -528,33 +510,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0393e019-4f92-4666-a1fe-3a3788cd9022",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "#### Example with batching"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Once upon a time, there were two sisters, Eliza Pickering and Ariana 'Ari' Lucas. When these lovely\n",
-      "Once upon a time, Keene was stung by a worm — actually, probably a python — snaking through his leg\n",
-      "Once upon a time, there was a professor of physics during the depression. It was difficult, during this time, to get\n",
-      "Once upon a time, before you got sick, you told stories to all and sundry, and your listeners believed in you\n",
-      "Once upon a time, there was one very old nice donkey. He was incredibly smart, in a very old, kind of\n",
-      "Once upon a time, the property of a common lodging house was a common cup for all the inhabitants. Betimes a constant\n",
-      "Once upon a time, in an unspecified country, there was a witch who had an illegal product. It was highly effective,\n",
-      "Once upon a time, a long time ago, I turned 13, my beautiful dog Duncan swept me up into his jaws like\n",
-      "Once upon a time, as a thoroughly reformed creature from an army of Nazis, he took On Judgement Day myself and his\n",
-      "Once upon a time, Capcom made a game for the Atari VCS called Missile Command. While it was innovative at the time\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "124fa31a-5c80-4335-ad60-af87e8123422",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import openai  # for making OpenAI API requests\n",
     "\n",
@@ -580,9 +561,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fce85048-5dc1-4e38-9c6c-3c97da177b7f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Example parallel processing script\n",
     "\n",
@@ -600,6 +588,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "How_to_handle_rate_limits",
+   "notebookOrigID": 1572001650642920,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3.9.9 ('openai')",
    "language": "python",
@@ -625,5 +621,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
