--- a/examples/Obtain_dataset.ipynb
+++ b/examples/Obtain_dataset.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4b50599f-1176-4c69-a2f8-e219f4b760bc",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 1. Load the dataset\n",
     "\n",
@@ -12,17 +20,32 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ea4f68ef-c953-4ef4-937d-07d0e244e75e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "To run this notebook, you will need to install: pandas, openai, transformers, plotly, matplotlib, scikit-learn, torch (transformer dep), torchvision, and scipy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "88a68e32-13d2-41fd-bc7b-866af6134313",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# imports\n",
@@ -34,8 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6cd1ee48-eccf-473d-894a-c8e4c9d793b4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# embedding model parameters\n",
@@ -46,87 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Time</th>\n",
-       "      <th>ProductId</th>\n",
-       "      <th>UserId</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Summary</th>\n",
-       "      <th>Text</th>\n",
-       "      <th>combined</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1351123200</td>\n",
-       "      <td>B003XPF9BO</td>\n",
-       "      <td>A3R7JR3FMEBXQB</td>\n",
-       "      <td>5</td>\n",
-       "      <td>where does one  start...and stop... with a tre...</td>\n",
-       "      <td>Wanted to save some to bring to my Chicago fam...</td>\n",
-       "      <td>Title: where does one  start...and stop... wit...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1351123200</td>\n",
-       "      <td>B003JK537S</td>\n",
-       "      <td>A3JBPC3WFUT5ZP</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Arrived in pieces</td>\n",
-       "      <td>Not pleased at all. When I opened the box, mos...</td>\n",
-       "      <td>Title: Arrived in pieces; Content: Not pleased...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Time   ProductId          UserId  Score  \\\n",
-       "0  1351123200  B003XPF9BO  A3R7JR3FMEBXQB      5   \n",
-       "1  1351123200  B003JK537S  A3JBPC3WFUT5ZP      1   \n",
-       "\n",
-       "                                             Summary  \\\n",
-       "0  where does one  start...and stop... with a tre...   \n",
-       "1                                  Arrived in pieces   \n",
-       "\n",
-       "                                                Text  \\\n",
-       "0  Wanted to save some to bring to my Chicago fam...   \n",
-       "1  Not pleased at all. When I opened the box, mos...   \n",
-       "\n",
-       "                                            combined  \n",
-       "0  Title: where does one  start...and stop... wit...  \n",
-       "1  Title: Arrived in pieces; Content: Not pleased...  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "44e4f93c-b66e-4d2b-8eb7-96ac9b28e43b",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# load & inspect dataset\n",
     "input_datapath = \"data/fine_food_reviews_1k.csv\"  # to save space, we provide a pre-filtered dataset\n",
@@ -141,20 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1ba0b745-6ddd-4bf3-8739-910d8c2ea65c",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# subsample to 1k most recent reviews and remove samples that are too long\n",
     "top_n = 1000\n",
@@ -170,17 +128,32 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a7ba5f1b-1178-4f87-884d-0065eabc46ce",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## 2. Get embeddings and save them for future reuse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fb031445-43e7-4c26-b9c4-d26a6dc27c3b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Ensure you have your API key set in your environment per the README: https://github.com/openai/openai-python#usage\n",
@@ -192,6 +165,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Obtain_dataset",
+   "notebookOrigID": 1572001650641657,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "openai",
    "language": "python",
@@ -217,5 +198,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
