--- a/examples/Regression_using_embeddings.ipynb
+++ b/examples/Regression_using_embeddings.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a22e31eb-04e2-4011-9abb-20e76b371589",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Regression using the embeddings\n",
     "\n",
@@ -13,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ada-002 embedding performance on 1k Amazon reviews: mse=0.62, mae=0.53\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ca616cfc-22a4-4845-9c29-5503c116461e",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -51,17 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dummy mean prediction performance on Amazon reviews: mse=1.73, mae=1.03\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a1aad45f-99d8-4184-9321-1190d05cb69f",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "bmse = mean_squared_error(y_test, np.repeat(y_test.mean(), len(y_test)))\n",
     "bmae = mean_absolute_error(y_test, np.repeat(y_test.mean(), len(y_test)))\n",
@@ -71,22 +79,45 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a8e5d9d1-c4e0-49b7-9c8d-ceff4110d9c2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "We can see that the embeddings are able to predict the scores with an average error of 0.53 per score prediction. This is roughly equivalent to predicting half of reviews perfectly, and half off by one star."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "80d5de95-e8d0-498f-a98a-32f1ec3d7d97",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "You could also train a classifier to predict the label, or use the embeddings within an existing ML model to encode free text features."
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Regression_using_embeddings",
+   "notebookOrigID": 1572001650641655,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "openai",
    "language": "python",
@@ -112,5 +143,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
