--- a/examples/Unit_test_writing_using_a_multi-step_prompt.ipynb
+++ b/examples/Unit_test_writing_using_a_multi-step_prompt.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "25ede96d-39e5-4691-a18c-9e0dbaa32ff4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Unit test writing using a multi-step prompt\n",
     "\n",
@@ -63,8 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2f0133e9-fbf0-4e7d-b176-ecb8cecdfb25",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# imports needed to run the code in this notebook\n",
@@ -264,156 +280,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "939b3ee6-0642-45f0-9969-ec3adc5c360d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[30m# How to write great unit tests with pytest\n",
-      "\n",
-      "In this advanced tutorial for experts, we'll use Python 3.9 and `pytest` to write a suite of unit tests to verify the behavior of the following function.\n",
-      "```python\n",
-      "def is_palindrome(s):\n",
-      "    return s == s[::-1]\n",
-      "```\n",
-      "\n",
-      "Before writing any unit tests, let's review what each element of the function is doing exactly and what the author's intentions may have been.\n",
-      "- First,\u001b[92m we have a function definition. This is where we give the function a name, `is_palindrome`, and specify the arguments that the function accepts. In this case, the function accepts a single string argument, `s`.\n",
-      "- Next, we have a return statement. This is where we specify the value that the function returns. In this case, the function returns `s == s[::-1]`.\n",
-      "- Finally, we have a function call. This is where we actually call the function with a specific set of arguments. In this case, we're calling the function with the string `\"racecar\"`.\u001b[30m\n",
-      "    \n",
-      "A good unit test suite should aim to:\n",
-      "- Test the function's behavior for a wide range of possible inputs\n",
-      "- Test edge cases that the author may not have foreseen\n",
-      "- Take advantage of the features of `pytest` to make the tests easy to write and maintain\n",
-      "- Be easy to read and understand, with clean code and descriptive names\n",
-      "- Be deterministic, so that the tests always pass or fail in the same way\n",
-      "\n",
-      "`pytest` has many convenient features that make it easy to write and maintain unit tests. We'll use them to write unit tests for the function above.\n",
-      "\n",
-      "For this particular function, we'll want our unit tests to handle the following diverse scenarios (and under each scenario, we include a few examples as sub-bullets):\n",
-      "-\u001b[92m The input is a palindrome\n",
-      "    - `\"racecar\"`\n",
-      "    - `\"madam\"`\n",
-      "    - `\"anna\"`\n",
-      "- The input is not a palindrome\n",
-      "    - `\"python\"`\n",
-      "    - `\"test\"`\n",
-      "    - `\"1234\"`\n",
-      "- The input is an empty string\n",
-      "    - `\"\"`\n",
-      "- The input is `None`\n",
-      "- The input is not a string\n",
-      "    - `1`\n",
-      "    - `1.0`\n",
-      "    - `True`\n",
-      "    - `False`\n",
-      "    - `[]`\n",
-      "    - `{}`\u001b[30m\n",
-      "\n",
-      "In addition to the scenarios above, we'll also want to make sure we don't forget to test rare or unexpected edge cases (and under each edge case, we include a few examples as sub-bullets):\n",
-      "-\u001b[92m The input is a palindrome with spaces\n",
-      "    - `\"race car\"`\n",
-      "    - `\" madam \"`\n",
-      "    - `\" anna \"`\n",
-      "- The input is not a palindrome with spaces\n",
-      "    - `\" python \"`\n",
-      "    - `\" test \"`\n",
-      "    - `\" 1234 \"`\n",
-      "- The input is a palindrome with punctuation\n",
-      "    - `\"racecar!\"`\n",
-      "    - `\"Madam, I'm Adam.\"`\n",
-      "    - `\"Anna's\"`\n",
-      "- The input is not a palindrome with punctuation\n",
-      "    - `\"python!\"`\n",
-      "    - `\"test.\"`\n",
-      "    - `\"1234!\"`\n",
-      "- The input is a palindrome with mixed case\n",
-      "    - `\"Racecar\"`\n",
-      "    - `\"Madam\"`\n",
-      "    - `\"Anna\"`\n",
-      "- The input is not a palindrome with mixed case\n",
-      "    - `\"Python\"`\n",
-      "    - `\"Test\"`\n",
-      "    - `\"1234\"`\u001b[30m\n",
-      "\n",
-      "Before going into the individual tests, let's first look at the complete suite of unit tests as a cohesive whole. We've added helpful comments to explain what each line does.\n",
-      "```python\n",
-      "import pytest  # used for our unit tests\n",
-      "\n",
-      "def is_palindrome(s):\n",
-      "    return s == s[::-1]\n",
-      "\n",
-      "#Below, each test case is represented by a tuple passed to the @pytest.mark.parametrize decorator\u001b[92m.\n",
-      "#The first element of the tuple is a name for the test case, and the second element is a list of arguments for the test case.\n",
-      "#The @pytest.mark.parametrize decorator will generate a separate test function for each test case.\n",
-      "#The generated test function will be named test_is_palindrome_<name> where <name> is the name of the test case.\n",
-      "#The generated test function will be given the arguments specified in the list of arguments for the test case.\n",
-      "#The generated test function will be given the fixture specified in the decorator, in this case the function itself.\n",
-      "#The generated test function will call the function with the arguments and assert that the result is equal to the expected value.\n",
-      "@pytest.mark.parametrize(\n",
-      "    \"name,args,expected\",\n",
-      "    [\n",
-      "        # Test the function's behavior for a wide range of possible inputs\n",
-      "        (\"palindrome\", [\"racecar\"], True),\n",
-      "        (\"palindrome\", [\"madam\"], True),\n",
-      "        (\"palindrome\", [\"anna\"], True),\n",
-      "        (\"non-palindrome\", [\"python\"], False),\n",
-      "        (\"non-palindrome\", [\"test\"], False),\n",
-      "        (\"non-palindrome\", [\"1234\"], False),\n",
-      "        (\"empty string\", [\"\"], True),\n",
-      "        (\"None\", [None], False),\n",
-      "        (\"non-string\", [1], False),\n",
-      "        (\"non-string\", [1.0], False),\n",
-      "        (\"non-string\", [True], False),\n",
-      "        (\"non-string\", [False], False),\n",
-      "        (\"non-string\", [[]], False),\n",
-      "        (\"non-string\", [{}], False),\n",
-      "        # Test edge cases that the author may not have foreseen\n",
-      "        (\"palindrome with spaces\", [\"race car\"], True),\n",
-      "        (\"palindrome with spaces\", [\" madam \"], True),\n",
-      "        (\"palindrome with spaces\", [\" anna \"], True),\n",
-      "        (\"non-palindrome with spaces\", [\" python \"], False),\n",
-      "        (\"non-palindrome with spaces\", [\" test \"], False),\n",
-      "        (\"non-palindrome with spaces\", [\" 1234 \"], False),\n",
-      "        (\"palindrome with punctuation\", [\"racecar!\"], True),\n",
-      "        (\"palindrome with punctuation\", [\"Madam, I'm Adam.\"], True),\n",
-      "        (\"palindrome with punctuation\", [\"Anna's\"], True),\n",
-      "        (\"non-palindrome with punctuation\", [\"python!\"], False),\n",
-      "        (\"non-palindrome with punctuation\", [\"test.\"], False),\n",
-      "        (\"non-palindrome with punctuation\", [\"1234!\"], False),\n",
-      "        (\"palindrome with mixed case\", [\"Racecar\"], True),\n",
-      "        (\"palindrome with mixed case\", [\"Madam\"], True),\n",
-      "        (\"palindrome with mixed case\", [\"Anna\"], True),\n",
-      "        (\"non-palindrome with mixed case\", [\"Python\"], False),\n",
-      "        (\"non-palindrome with mixed case\", [\"Test\"], False),\n",
-      "        (\"non-palindrome with mixed case\", [\"1234\"], False),\n",
-      "    ],\n",
-      ")\n",
-      "def test_is_palindrome(is_palindrome, args, expected):\n",
-      "    assert is_palindrome(*args) == expected\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'.\\n#The first element of the tuple is a name for the test case, and the second element is a list of arguments for the test case.\\n#The @pytest.mark.parametrize decorator will generate a separate test function for each test case.\\n#The generated test function will be named test_is_palindrome_<name> where <name> is the name of the test case.\\n#The generated test function will be given the arguments specified in the list of arguments for the test case.\\n#The generated test function will be given the fixture specified in the decorator, in this case the function itself.\\n#The generated test function will call the function with the arguments and assert that the result is equal to the expected value.\\n@pytest.mark.parametrize(\\n    \"name,args,expected\",\\n    [\\n        # Test the function\\'s behavior for a wide range of possible inputs\\n        (\"palindrome\", [\"racecar\"], True),\\n        (\"palindrome\", [\"madam\"], True),\\n        (\"palindrome\", [\"anna\"], True),\\n        (\"non-palindrome\", [\"python\"], False),\\n        (\"non-palindrome\", [\"test\"], False),\\n        (\"non-palindrome\", [\"1234\"], False),\\n        (\"empty string\", [\"\"], True),\\n        (\"None\", [None], False),\\n        (\"non-string\", [1], False),\\n        (\"non-string\", [1.0], False),\\n        (\"non-string\", [True], False),\\n        (\"non-string\", [False], False),\\n        (\"non-string\", [[]], False),\\n        (\"non-string\", [{}], False),\\n        # Test edge cases that the author may not have foreseen\\n        (\"palindrome with spaces\", [\"race car\"], True),\\n        (\"palindrome with spaces\", [\" madam \"], True),\\n        (\"palindrome with spaces\", [\" anna \"], True),\\n        (\"non-palindrome with spaces\", [\" python \"], False),\\n        (\"non-palindrome with spaces\", [\" test \"], False),\\n        (\"non-palindrome with spaces\", [\" 1234 \"], False),\\n        (\"palindrome with punctuation\", [\"racecar!\"], True),\\n        (\"palindrome with punctuation\", [\"Madam, I\\'m Adam.\"], True),\\n        (\"palindrome with punctuation\", [\"Anna\\'s\"], True),\\n        (\"non-palindrome with punctuation\", [\"python!\"], False),\\n        (\"non-palindrome with punctuation\", [\"test.\"], False),\\n        (\"non-palindrome with punctuation\", [\"1234!\"], False),\\n        (\"palindrome with mixed case\", [\"Racecar\"], True),\\n        (\"palindrome with mixed case\", [\"Madam\"], True),\\n        (\"palindrome with mixed case\", [\"Anna\"], True),\\n        (\"non-palindrome with mixed case\", [\"Python\"], False),\\n        (\"non-palindrome with mixed case\", [\"Test\"], False),\\n        (\"non-palindrome with mixed case\", [\"1234\"], False),\\n    ],\\n)\\ndef test_is_palindrome(is_palindrome, args, expected):\\n    assert is_palindrome(*args) == expected\\n'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "67cf2199-43fb-47f8-bfdd-b995c51fee9a",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "example_function = \"\"\"def is_palindrome(s):\n",
     "    return s == s[::-1]\"\"\"\n",
@@ -423,6 +315,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Unit_test_writing_using_a_multi-step_prompt",
+   "notebookOrigID": 1572001650641963,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3.9.9 ('openai')",
    "language": "python",
@@ -448,5 +348,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
