--- a/examples/Visualizing_embeddings_in_W&B.ipynb
+++ b/examples/Visualizing_embeddings_in_W&B.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b22be12c-b245-414a-9fd4-2799141c5021",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Visualizing the embeddings in W&B\n",
     "\n",
@@ -10,9 +18,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f5264d46-a38d-44e6-afdd-786ea538475f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## What is Weights & Biases?\n",
     "\n",
@@ -21,7 +36,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d16e6ed3-cbb8-4502-a4c3-6c1a7b4f6f6d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### 1. Log the data to W&B\n",
     "\n",
@@ -30,8 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e2c045e1-220d-4fbb-a696-2eb288702041",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -48,8 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0a0b7db0-8d81-40f0-871d-541bf1da70e2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import wandb\n",
@@ -69,27 +108,59 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a2fcc971-d0ef-4e2e-b92c-5c30e9ffbfa8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### 2. Render as 2D Projection"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "010e077b-3aed-4044-97ef-efb5566ef9e4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
-    "After navigating to the W&B run link, we click the ⚙️ icon in the top right of the Table and change \"Render As:\" to \"Combined 2D Projection\". "
+    "After navigating to the W&B run link, we click the ⚙️ icon in the top right of the Table and change \"Render As:\" to \"Combined 2D Projection\"."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "72b7a180-a943-410b-b300-cd97a8779543",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "Example: http://wandb.me/openai_embeddings"
    ]
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Visualizing_embeddings_in_W&B",
+   "notebookOrigID": 1572001650642875,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -114,5 +185,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 0
 }
