--- a/examples/Visualizing_embeddings_with_Atlas.ipynb
+++ b/examples/Visualizing_embeddings_with_Atlas.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "eab5577a-6bac-48ff-8286-870d4d1ff852",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Visualizing Open AI Embeddings in Atlas\n",
     "\n",
@@ -10,9 +18,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "26ec91ec-e031-4c1d-b254-5a1d20e5d6ff",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## What is Atlas?\n",
     "\n",
@@ -21,33 +36,49 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "40d8cec0-7cdf-405f-84cd-594ee1a23919",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
-    "### 1. Login to Atlas.\n"
+    "### 1. Login to Atlas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-     ]
-    }
-   ],
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ae43753a-045a-426e-aaed-1ef49605dce8",
+     "showTitle": false,
+     "title": ""
+    },
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "!pip install nomic"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "01c8a5f2-b28c-4a67-a74c-21d2b97e1c9a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -65,16 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "62c7b539-fbc0-40e8-8860-43f02cb03b28",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import nomic\n",
     "from nomic import atlas\n",
@@ -89,43 +121,63 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "03e1cc51-0438-40f9-8660-873c01dc21b1",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### 2. Interact with your embeddings in Jupyter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "meek-laborer: https://atlas.nomic.ai/map/fddc0e07-97c5-477c-827c-96bca44519aa/463f4614-7689-47e4-b55b-1da0cc679559",
-      "text/html": "\n            <h3>Project: meek-laborer</h3>\n            <script>\n            destroy = function() {\n                document.getElementById(\"iframe463f4614-7689-47e4-b55b-1da0cc679559\").remove()\n            }\n        </script>\n\n        <h4>Projection ID: 463f4614-7689-47e4-b55b-1da0cc679559</h4>\n        <div class=\"actions\">\n            <div id=\"hide\" class=\"action\" onclick=\"destroy()\">Hide embedded project</div>\n            <div class=\"action\" id=\"out\">\n                <a href=\"https://atlas.nomic.ai/map/fddc0e07-97c5-477c-827c-96bca44519aa/463f4614-7689-47e4-b55b-1da0cc679559\" target=\"_blank\">Explore on atlas.nomic.ai</a>\n            </div>\n        </div>\n        \n        <iframe class=\"iframe\" id=\"iframe463f4614-7689-47e4-b55b-1da0cc679559\" allow=\"clipboard-read; clipboard-write\" src=\"https://atlas.nomic.ai/map/fddc0e07-97c5-477c-827c-96bca44519aa/463f4614-7689-47e4-b55b-1da0cc679559\">\n        </iframe>\n\n        <style>\n            .iframe {\n                /* vh can be **very** large in vscode ipynb. */\n                height: min(75vh, 66vw);\n                width: 100%;\n            }\n        </style>\n        \n        <style>\n            .actions {\n              display: block;\n            }\n            .action {\n              min-height: 18px;\n              margin: 5px;\n              transition: all 500ms ease-in-out;\n            }\n            .action:hover {\n              cursor: pointer;\n            }\n            #hide:hover::after {\n                content: \" X\";\n            }\n            #out:hover::after {\n                content: \"\";\n            }\n        </style>\n        \n            "
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b6c1d994-1090-4566-9ad3-d4014bbbddd2",
+     "showTitle": false,
+     "title": ""
+    },
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "map"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2263cb9c-a588-4819-883f-a0e3c10f74c5",
+     "showTitle": false,
+     "title": ""
+    },
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Visualizing_embeddings_with_Atlas",
+   "notebookOrigID": 1572001650642701,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -150,5 +202,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 0
 }
