--- a/examples/azure/chat.ipynb
+++ b/examples/azure/chat.ipynb
@@ -1,9 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "85412f6e-804b-4338-8af7-34037c538fe6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Azure chat completions example (preview)\n",
     "In this example we'll try to go over all operations needed to get chat completions working using the Azure endpoints. \\\n",
@@ -12,17 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "feb87a93-0a9c-4235-9162-4f8da858f31f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import openai"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4c582527-3354-42f8-aadd-8bea04fa4b58",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Setup\n",
     "For the following sections to work properly we first have to setup some things. Let's start with the `api_base` and `api_version`. To find your `api_base` go to https://portal.azure.com, find your resource and then under \"Resource Management\" -> \"Keys and Endpoints\" look for the \"Endpoint\" value."
@@ -30,8 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "12e94659-6efd-482b-b221-d783bcce848b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "openai.api_version = '2023-03-15-preview'\n",
@@ -40,15 +70,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "606f1e21-57fd-480a-ba26-99026f01b653",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "We next have to setup the `api_type` and `api_key`. We can either get the key from the portal or we can get it through Microsoft Active Directory Authentication. Depending on this the `api_type` is either `azure` or `azure_ad`."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cb1ccabb-4cbb-405e-8758-acdcc32c7504",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Setup: Portal\n",
     "Let's first look at getting the key from the portal. Go to https://portal.azure.com, find your resource and then under \"Resource Management\" -> \"Keys and Endpoints\" look for one of the \"Keys\" values."
@@ -56,8 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "63e5a2a2-1804-48be-b663-871dd45f4102",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "openai.api_type = 'azure'\n",
@@ -65,9 +118,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "05a302f5-27e8-4bab-8939-3880291b4c34",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### (Optional) Setup: Microsoft Active Directory Authentication\n",
     "Let's now see how we can get a key via Microsoft Active Directory Authentication. Uncomment the following code if you want to use Active Directory Authentication instead of keys from the portal."
@@ -75,8 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "70a544e3-9468-47b2-9f14-fd719d9c3e4c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# from azure.identity import DefaultAzureCredential\n",
@@ -89,36 +157,65 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "83ad7cbb-5d44-410f-9c57-93de89f229a2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Deployments\n",
     "In this section we are going to create a deployment using the `gpt-35-turbo` model that we can then use to create chat completions."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9c62ee18-1913-436b-b118-0f44a089cd57",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Deployments: Create manually\n",
-    "Let's create a deployment using the `gpt-35-turbo` model. Go to https://portal.azure.com, find your resource and then under \"Resource Management\" -> \"Model deployments\" create a new `gpt-35-turbo` deployment. "
+    "Let's create a deployment using the `gpt-35-turbo` model. Go to https://portal.azure.com, find your resource and then under \"Resource Management\" -> \"Model deployments\" create a new `gpt-35-turbo` deployment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d4b03441-e3cb-4a55-8734-45259b55ea6c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "deployment_id = \"\" # Fill in the deployment id from the portal here"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "20b973f7-7a0c-4c44-9699-e7853a3ef838",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### (Optional) Deployments: Create programatically\n",
     "We can also create the deployment using code. Note that you can only create one deployment per model."
@@ -126,8 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6220f0d1-a4f6-4ba3-996a-257fddfa62eb",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "model = \"gpt-35-turbo\"\n",
@@ -141,7 +246,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "640a85a1-f174-438f-aa50-8b22c5732130",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### (Optional) Deployments: Wait for deployment to succeed\n",
     "Now let's check the status of the newly created deployment and wait till it is succeeded."
@@ -149,8 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0529ac00-f9fa-4c62-9708-37f43af7093c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "print(f'Checking for deployment status.')\n",
@@ -164,9 +285,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9818e319-b1c0-4e28-a859-7462a98490c2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Create chat completion\n",
     "Now let's send a sample chat completion to the deployment."
@@ -174,8 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "31fa3c40-c02f-4a88-b1d8-502441068caf",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# For all possible arguments see https://platform.openai.com/docs/api-reference/chat-completions/create\n",
@@ -194,17 +330,32 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "23da8947-986c-47d6-b615-7ee24b8a8a6e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
-    "We can also stream the response.\n"
+    "We can also stream the response."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e8bac554-4050-4c63-bba3-d88710e8348e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "response = openai.ChatCompletion.create(\n",
@@ -229,9 +380,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1247f303-232e-4379-8c2b-45cf2271743b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### (Optional) Deployments: Delete\n",
     "Finally let's delete the deployment."
@@ -239,8 +397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0f7e1561-d4da-45ca-b5fa-62bb561419c6",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "print(f'Deleting deployment: {deployment_id}')\n",
@@ -249,6 +415,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "chat",
+   "notebookOrigID": 1572001650642322,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -269,5 +443,5 @@
   "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
