--- a/examples/vector_databases/analyticdb/Getting_started_with_AnalyticDB_and_OpenAI.ipynb
+++ b/examples/vector_databases/analyticdb/Getting_started_with_AnalyticDB_and_OpenAI.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5a7c121a-f6e3-4568-bb27-29192d4376d3",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Using AnalyticDB as a vector database for OpenAI embeddings\n",
     "\n",
@@ -20,12 +28,20 @@
     "\n",
     "### Deployment options\n",
     "\n",
-    "- Using [AnalyticDB Cloud Vector Database](https://www.alibabacloud.com/help/zh/analyticdb-for-postgresql/latest/overview-2). [Click here](https://www.alibabacloud.com/product/hybriddb-postgresql) to fast deploy it.\n"
+    "- Using [AnalyticDB Cloud Vector Database](https://www.alibabacloud.com/help/zh/analyticdb-for-postgresql/latest/overview-2). [Click here](https://www.alibabacloud.com/product/hybriddb-postgresql) to fast deploy it."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "24081a90-1719-41ab-9278-f52b66bdd47b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Prerequisites\n",
     "\n",
@@ -33,33 +49,55 @@
     "\n",
     "1. AnalyticDB cloud server instance.\n",
     "2. The 'psycopg2' library to interact with the vector database. Any other postgresql client library is ok.\n",
-    "3. An [OpenAI API key](https://beta.openai.com/account/api-keys).\n",
-    "\n"
+    "3. An [OpenAI API key](https://beta.openai.com/account/api-keys)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "201f90f4-8ab3-4e95-a404-9823c8b6acac",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
-    "We might validate if the server was launched successfully by running a simple curl command:\n"
+    "We might validate if the server was launched successfully by running a simple curl command:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5d88304f-5bae-4526-96c2-b394410de0fc",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Install requirements\n",
     "\n",
-    "This notebook obviously requires the `openai` and `psycopg2` packages, but there are also some other additional libraries we will use. The following command installs them all:\n"
+    "This notebook obviously requires the `openai` and `psycopg2` packages, but there are also some other additional libraries we will use. The following command installs them all:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:05:05.718972Z",
      "start_time": "2023-02-16T12:04:30.434820Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "81aaf2ec-d364-41eb-8e96-ba8a99d66e00",
+     "showTitle": false,
+     "title": ""
     },
     "pycharm": {
      "is_executing": true
@@ -72,7 +110,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a337ad01-82a6-4210-9351-08fa19587948",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "### Prepare your OpenAI API key\n",
     "\n",
@@ -85,22 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:05:05.730338Z",
      "start_time": "2023-02-16T12:05:05.723351Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "09727742-4b92-4031-903e-300003a05554",
+     "showTitle": false,
+     "title": ""
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPENAI_API_KEY is ready\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test that your OpenAI API key is correctly set as an environment variable\n",
     "# Note. if you run this notebook locally, you will need to reload your terminal and the notebook for the env variables to be live.\n",
@@ -117,7 +162,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7cbedaab-152f-4571-9b7c-5a7ef73998ee",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Connect to AnalyticDB\n",
     "First add it to your environment variables. or you can just change the \"psycopg2.connect\" parameters below\n",
@@ -127,11 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:05:06.827143Z",
      "start_time": "2023-02-16T12:05:05.733771Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c0d4af86-7c77-4595-bf7d-0b90f45bf9b4",
+     "showTitle": false,
+     "title": ""
     }
    },
    "outputs": [],
@@ -160,32 +220,39 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a3b304bf-194b-4f38-9fb6-935169b667ae",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "We can test the connection by running any available method:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:05:06.848488Z",
      "start_time": "2023-02-16T12:05:06.832612Z"
     },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "236363b1-b382-46e6-87d9-3795b54e0211",
+     "showTitle": false,
+     "title": ""
+    },
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection successful!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Execute a simple query to test the connection\n",
@@ -201,35 +268,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:05:37.371951Z",
      "start_time": "2023-02-16T12:05:06.851634Z"
     },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5a28c60a-67c1-41f4-887d-7247685e6a90",
+     "showTitle": false,
+     "title": ""
+    },
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100% [......................................................................] 698933052 / 698933052"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'vector_database_wikipedia_articles_embedded.zip'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import wget\n",
     "\n",
@@ -241,29 +297,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0e8d9695-bf72-4a23-854a-39b9d74a34af",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "The downloaded file has to be then extracted:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:06:01.538851Z",
      "start_time": "2023-02-16T12:05:37.376042Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8939583d-e9b6-4130-8df5-64169236b6aa",
+     "showTitle": false,
+     "title": ""
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file vector_database_wikipedia_articles_embedded.csv exists in the data directory.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import zipfile\n",
     "import os\n",
@@ -292,7 +355,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "235eac5b-e480-4407-a2d1-6f1445a2912b",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Index data\n",
     "\n",
@@ -303,11 +374,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:17:36.366066Z",
      "start_time": "2023-02-16T12:17:35.486872Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "18fab22d-14ed-4408-be52-31f517a710a6",
+     "showTitle": false,
+     "title": ""
     }
    },
    "outputs": [],
@@ -343,7 +421,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "57bc09b2-95a2-4f7a-9652-59d84c6ee5ec",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Load data\n",
     "\n",
@@ -352,11 +438,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:30:37.518210Z",
      "start_time": "2023-02-16T12:17:36.368564Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "004982d3-d48a-4913-a0d0-bf673ee24fcb",
+     "showTitle": false,
+     "title": ""
     },
     "pycharm": {
      "is_executing": true
@@ -396,25 +489,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:30:40.675202Z",
      "start_time": "2023-02-16T12:30:40.655654Z"
     },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "df535539-ac8d-4d36-9c3c-cc93662be198",
+     "showTitle": false,
+     "title": ""
+    },
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Count:25000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check the collection size to make sure all the points have been stored\n",
     "count_sql = \"\"\"select count(*) from public.articles;\"\"\"\n",
@@ -425,20 +517,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "65f48cdd-d3a3-4f70-b4b0-16f75ba84e4a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Search data\n",
     "\n",
-    "Once the data is put into Qdrant we will start querying the collection for the closest vectors. We may provide an additional parameter `vector_name` to switch from title to content based search. Since the precomputed embeddings were created with `text-embedding-ada-002` OpenAI model we also have to use it during search.\n"
+    "Once the data is put into Qdrant we will start querying the collection for the closest vectors. We may provide an additional parameter `vector_name` to switch from title to content based search. Since the precomputed embeddings were created with `text-embedding-ada-002` OpenAI model we also have to use it during search."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:30:38.024370Z",
      "start_time": "2023-02-16T12:30:37.712816Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a0011d03-c1bc-4363-9d6b-9df22403922b",
+     "showTitle": false,
+     "title": ""
     }
    },
    "outputs": [],
@@ -470,41 +577,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:30:39.379566Z",
      "start_time": "2023-02-16T12:30:38.031041Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4f40e72e-168e-4750-b251-b4539492c58f",
+     "showTitle": false,
+     "title": ""
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Museum of Modern Art (Score: 0.75)\n",
-      "2. Western Europe (Score: 0.735)\n",
-      "3. Renaissance art (Score: 0.728)\n",
-      "4. Pop art (Score: 0.721)\n",
-      "5. Northern Europe (Score: 0.71)\n",
-      "6. Hellenistic art (Score: 0.706)\n",
-      "7. Modernist literature (Score: 0.694)\n",
-      "8. Art film (Score: 0.687)\n",
-      "9. Central Europe (Score: 0.685)\n",
-      "10. European (Score: 0.683)\n",
-      "11. Art (Score: 0.683)\n",
-      "12. Byzantine art (Score: 0.682)\n",
-      "13. Postmodernism (Score: 0.68)\n",
-      "14. Eastern Europe (Score: 0.679)\n",
-      "15. Europe (Score: 0.678)\n",
-      "16. Cubism (Score: 0.678)\n",
-      "17. Impressionism (Score: 0.677)\n",
-      "18. Bauhaus (Score: 0.676)\n",
-      "19. Surrealism (Score: 0.674)\n",
-      "20. Expressionism (Score: 0.674)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openai\n",
     "\n",
@@ -515,41 +602,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 0,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-16T12:30:40.652676Z",
      "start_time": "2023-02-16T12:30:39.382555Z"
+    },
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8a1c811b-4a9e-4093-9a84-fc711d12033e",
+     "showTitle": false,
+     "title": ""
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Battle of Bannockburn (Score: 0.739)\n",
-      "2. Wars of Scottish Independence (Score: 0.723)\n",
-      "3. 1651 (Score: 0.705)\n",
-      "4. First War of Scottish Independence (Score: 0.699)\n",
-      "5. Robert I of Scotland (Score: 0.692)\n",
-      "6. 841 (Score: 0.688)\n",
-      "7. 1716 (Score: 0.688)\n",
-      "8. 1314 (Score: 0.674)\n",
-      "9. 1263 (Score: 0.673)\n",
-      "10. William Wallace (Score: 0.671)\n",
-      "11. Stirling (Score: 0.663)\n",
-      "12. 1306 (Score: 0.662)\n",
-      "13. 1746 (Score: 0.661)\n",
-      "14. 1040s (Score: 0.656)\n",
-      "15. 1106 (Score: 0.654)\n",
-      "16. 1304 (Score: 0.653)\n",
-      "17. David II of Scotland (Score: 0.65)\n",
-      "18. Braveheart (Score: 0.649)\n",
-      "19. 1124 (Score: 0.648)\n",
-      "20. July 27 (Score: 0.646)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This time we'll query using content vector\n",
     "query_results = query_analyticdb(\"Famous battles in Scottish history\", \"Articles\", \"content_vector\")\n",
@@ -559,13 +626,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "472f3e3a-c479-4fc3-8638-5a10b38c5502",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Getting_started_with_AnalyticDB_and_OpenAI",
+   "notebookOrigID": 1572001650642398,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -585,5 +668,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
