--- a/examples/vector_databases/zilliz/Filtered_search_with_Zilliz_and_OpenAI.ipynb
+++ b/examples/vector_databases/zilliz/Filtered_search_with_Zilliz_and_OpenAI.ipynb
@@ -1,9 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7ae8eeae-d9c7-4bf9-a7da-7d49aa5c4216",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Filtered Search with Zilliz and OpenAI\n",
     "### Finding your next movie\n",
@@ -14,22 +21,37 @@
     "- `openai` is used for communicating with the OpenAI embedding service\n",
     "- `pymilvus` is used for communicating with the Zilliz server\n",
     "- `datasets` is used for downloading the dataset\n",
-    "- `tqdm` is used for the progress bars\n"
+    "- `tqdm` is used for the progress bars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "60782653-2350-4c3c-8adc-d24bc76e04c8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "! pip install openai pymilvus datasets tqdm"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "aa8f4bc6-0c6c-481b-83f9-4740ce46dc1a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "To get Zilliz up and running take a look [here](https://zilliz.com/doc/quick_start). With your account and database set up, proceed to set the following values:\n",
     "- URI: The URI your database is running on\n",
@@ -46,8 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1079acfb-6f3a-4512-bd3c-6c7b0e3fde72",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "import openai\n",
@@ -76,8 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8fc17fc7-2afb-401c-aa49-ccee5641ff11",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pymilvus import connections, utility, FieldSchema, Collection, CollectionSchema, DataType\n",
@@ -88,8 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "97f1e1d6-3ea5-43c6-bf04-1ea3d3bd9786",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Remove collection if it already exists\n",
@@ -99,8 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "eaeb9865-6e09-4fa4-9b02-7f16227d30e4",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Create collection which includes the id, title, and embedding.\n",
@@ -119,8 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f1c9fb76-6801-422f-98f4-d24e6d2de74f",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Create the index on the collection and load it.\n",
@@ -129,9 +191,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1c074cf1-2cf6-4382-9e74-2bf8068034a8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Dataset\n",
     "With Zilliz up and running we can begin grabbing our data. `Hugging Face Datasets` is a hub that holds many different user datasets, and for this example we are using HuggingLearners's netflix-shows dataset. This dataset contains movies and their metadata pairs for over 8 thousand movies. We are going to embed each description and store it within Zilliz along with its title, type, release_year and rating."
@@ -139,19 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/filiphaltmayer/miniconda3/envs/haystack/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Found cached dataset csv (/Users/filiphaltmayer/.cache/huggingface/datasets/hugginglearners___csv/hugginglearners--netflix-shows-03475319fc65a05a/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d231e893-66d1-47af-9af5-3ca86135d24b",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import datasets\n",
     "\n",
@@ -160,18 +227,33 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c93266a2-428d-45a8-9953-e8d00917dd6a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Insert the Data\n",
-    "Now that we have our data on our machine we can begin embedding it and inserting it into Zilliz. The embedding function takes in text and returns the embeddings in a list format. "
+    "Now that we have our data on our machine we can begin embedding it and inserting it into Zilliz. The embedding function takes in text and returns the embeddings in a list format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "51bd80dd-06e3-4eda-934f-c8b8ba9b1561",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Simple function that converts the texts to embeddings\n",
@@ -184,26 +266,33 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "caa81e7c-72c3-4783-8134-a938345614d0",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
-    "This next step does the actual inserting. We iterate through all the entries and create batches that we insert once we hit our set batch size. After the loop is over we insert the last remaning batch if it exists. "
+    "This next step does the actual inserting. We iterate through all the entries and create batches that we insert once we hit our set batch size. After the loop is over we insert the last remaning batch if it exists."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 8807/8807 [00:54<00:00, 162.59it/s]\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "14474649-a610-45ca-8614-150d7ce5775d",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -235,53 +324,34 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "97839094-f6cb-4036-a8c1-5be31b59748e",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "## Query the Database\n",
-    "With our data safely inserted into Zilliz, we can now perform a query. The query takes in a tuple of the movie description you are searching for and the filter to use. More info about the filter can be found [here](https://milvus.io/docs/boolean.md). The search first prints out your description and filter expression. After that for each result we print the score, title, type, release year, rating and description of the result movies. "
+    "With our data safely inserted into Zilliz, we can now perform a query. The query takes in a tuple of the movie description you are searching for and the filter to use. More info about the filter can be found [here](https://milvus.io/docs/boolean.md). The search first prints out your description and filter expression. After that for each result we print the score, title, type, release year, rating and description of the result movies."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Description: movie about a fluffly animal Expression: release_year < 2019 and rating like \"PG%\"\n",
-      "Results:\n",
-      "\tRank: 1 Score: 0.30085673928260803 Title: The Lamb\n",
-      "\t\tType: Movie Release Year: 2017 Rating: PG\n",
-      "A big-dreaming donkey escapes his menial existence and befriends some free-spirited\n",
-      "animal pals in this imaginative retelling of the Nativity Story.\n",
-      "\n",
-      "\tRank: 2 Score: 0.3352621793746948 Title: Puss in Boots\n",
-      "\t\tType: Movie Release Year: 2011 Rating: PG\n",
-      "The fabled feline heads to the Land of Giants with friends Humpty Dumpty and Kitty\n",
-      "Softpaws on a quest to nab its greatest treasure: the Golden Goose.\n",
-      "\n",
-      "\tRank: 3 Score: 0.3415083587169647 Title: Show Dogs\n",
-      "\t\tType: Movie Release Year: 2018 Rating: PG\n",
-      "A rough and tough police dog must go undercover with an FBI agent as a prim and proper\n",
-      "pet at a dog show to save a baby panda from an illegal sale.\n",
-      "\n",
-      "\tRank: 4 Score: 0.3428957462310791 Title: Open Season 2\n",
-      "\t\tType: Movie Release Year: 2008 Rating: PG\n",
-      "Elliot the buck and his forest-dwelling cohorts must rescue their dachshund pal from\n",
-      "some spoiled pets bent on returning him to domesticity.\n",
-      "\n",
-      "\tRank: 5 Score: 0.34376364946365356 Title: Stuart Little 2\n",
-      "\t\tType: Movie Release Year: 2002 Rating: PG\n",
-      "Zany misadventures are in store as lovable city mouse Stuart and his human brother,\n",
-      "George, raise the roof in this sequel to the 1999 blockbuster.\n",
-      "\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9434b5f1-a3ef-4a30-bd9b-db95197b0452",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import textwrap\n",
     "\n",
@@ -304,6 +374,14 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "Filtered_search_with_Zilliz_and_OpenAI",
+   "notebookOrigID": 1572001650642783,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "haystack",
    "language": "python",
@@ -324,5 +402,5 @@
   "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
